Fixed unit assignment arrows on firefox

--- a/web/css/less/chargeback.less
+++ b/web/css/less/chargeback.less
@@ -100,11 +100,12 @@
         }
         .unit {
             color : @st-bg-text-strong;
+            position : relative;
             button.right-arrow {
-                float : right;
+                position : absolute;
+                right : 0;
             }
             button.left-arrow {
-                float        : left;
                 margin-right : 10px;
             }
         }
